testdata/baselines/reference/submodule/conformance/privateNamesUnique-3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNamesUnique-3.ts(2,5): error TS2804: Duplicate identifier '#foo'. Static and instance elements cannot share the same private name.
privateNamesUnique-3.ts(3,12): error TS2804: Duplicate identifier '#foo'. Static and instance elements cannot share the same private name.
privateNamesUnique-3.ts(11,11): error TS2339: Property '#foo' does not exist on type 'B'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNamesUnique-3.ts (3 errors) ====
    class A {
        #foo = 1;
        ~~~~
!!! error TS2804: Duplicate identifier '#foo'. Static and instance elements cannot share the same private name.
        static #foo = true; // error (duplicate)
               ~~~~
!!! error TS2804: Duplicate identifier '#foo'. Static and instance elements cannot share the same private name.
                            // because static and instance private names
                            // share the same lexical scope
                            // https://tc39.es/proposal-class-fields/#prod-ClassBody
    }
    class B {
        static #foo = true;
        test(x: B) {
            x.#foo; // error (#foo is a static property on B, not an instance property)
              ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'B'.
        }
    }
    